<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityTentangKami">


    <LinearLayout
        android:id="@+id/head_ttgkami"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/red">
        <ImageView
            android:id="@+id/icbackttgkami"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_back"
            android:layout_margin="15dp"/>
        <TextView
            android:id="@+id/text_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tentang Kami"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/head_ttgkami"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/logopojok"
                android:layout_marginVertical="20dp"
                app:shapeAppearanceOverlay="@style/FullRoundedImage" />


            <!-- Deskripsi Umum -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_desc"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <!-- Penjelasan Layanan -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Layanan Kami"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1. Recolor"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/des_recolor"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2. Reglue"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/des_reglue"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3. Deep Cleaning"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/des_deep_clean"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="4. Fast Clean"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/des_fast_clean"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
